syntax = "proto2";

package imc;

option java_package = "annette.imc.serializer.proto";

import "ap.proto";

message MailNotificationServiceStateV1 {
    map<string, MailNotificationV1> n = 1;
}

message SmsNotificationServiceStateV1 {
    map<string, SmsNotificationV1> n = 1;
}

message SmsVerificationServiceStateV1 {
    map<string, SmsVerificationV1> n = 1;
}

message MailNotificationV1 {
    oneof notification_oneof {
        MailNotificationPasswordV1 opt1 = 1;
        MailNotificationToExpertiseV1 opt2 = 2;
        MailNotificationToReviewV1 opt3 = 3;
        MailNotificationNotReadyV1 opt4 = 4;
    }
}

message SmsNotificationV1 {
    oneof notification_oneof {
        SmsNotificationPasswordV1 opt1 = 1;
        SmsNotificationVerificationV1 opt2 = 2;
        SmsNotificationToExpertiseV1 opt3 = 3;
        SmsNotificationToReviewV1 opt4 = 4;
    }
}

message SmsVerificationV1 {
    oneof notification_oneof {
        SmsVerificationStatusV1 opt1 = 1;
        SmsVerificationVotedV1 opt2 = 2;
    }
}

message MailNotificationPasswordV1 {
    required string id = 1;
    required string email = 2;
    required string password = 3;
    required string language = 4;
    map<string, string> templateParameters = 5;
    required int32 retry = 6;
}

message MailNotificationToExpertiseV1 {
    required string id = 1;
    required string email = 2;
    required string language = 3;
    map<string, string> templateParameters = 4;
    required int32 retry = 5;
}

message MailNotificationToReviewV1 {
    required string id = 1;
    required string email = 2;
    required string language = 3;
    map<string, string> templateParameters = 4;
    required int32 retry = 5;
}
message MailNotificationNotReadyV1 {
    required string id = 1;
    required string email = 2;
    required string language = 3;
    map<string, string> templateParameters = 4;
    required int32 retry = 5;
}

message SmsNotificationPasswordV1 {
    required string id = 1;
    required string phone = 2;
    required string password = 3;
    required string language = 4;
    required int32 retry = 5;
}

message SmsNotificationVerificationV1 {
    required string id = 1;
    required string phone = 2;
    required string code = 3;
    required string language = 4;
    required int32 retry = 5;
}

message SmsNotificationToExpertiseV1 {
    required string id = 1;
    required string phone = 2;
    required string language = 3;
    required int32 retry = 4;
}

message SmsNotificationToReviewV1 {
    required string id = 1;
    required string phone = 2;
    required string language = 3;
    required int32 retry = 4;
}

message SmsVerificationStatusV1 {
    required string id = 1;
    required string code = 2;
    required string phone = 3;
    required string language = 4;
    required int64 duration = 5;
}

message SmsVerificationVotedV1 {
    required string id = 1;
    required string code = 2;
    required string phone = 3;
    required string apId = 4;
    required UpdateBulletinV1 bulletin = 5;
    required string language = 6;
    required int64 duration = 7;
}

message MailNotificationServiceAddedNotificationEvtV1 {
    required MailNotificationV1 x = 1;
}

message MailNotificationServiceDeletedNotificationEvtV1 {
    required string id = 1;
}
message MailNotificationServiceUpdatedRetryEvtV1 {
    required string id = 1;
    required int32 retry = 2;
}

message SmsNotificationServiceAddedNotificationEvtV1 {
    required SmsNotificationV1 x = 1;
}
message SmsNotificationServiceDeletedNotificationEvtV1 {
    required string id = 1;
}
message SmsNotificationServiceUpdatedRetryEvtV1 {
    required string id = 1;
    required int32 retry = 2;
}

message SmsVerificationServiceAddedVerificationEvtV1 {
    required SmsVerificationV1 x = 1;
}
message SmsVerificationServiceDeletedVerificationEvtV1 {
    required string id = 1;
}

